CSDEV/objects/HAE_Product_Attributes__c.object
<CustomObject>
    <description>HAE: defines for region specific Product Attributes.</description>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>HAE: defines the active state for the records.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Availability_Status__c</fullName>
        <description>HAE: defines the status of availability</description>
        <label>Availability Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Business_Unit__c</fullName>
        <description>HAE: defines the Business Unit for CS Attributes.</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Blood Center</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Case_Height__c</fullName>
        <description>HAE: need to be entered Height in INCHES</description>
        <label>Case Height (inches)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Length_inches__c</fullName>
        <description>HAE: need to be entered Length in INCHES</description>
        <label>Case Length (inches)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Weight__c</fullName>
        <description>HAE: need to be entered Weight in KG</description>
        <label>Case Weight (kgs)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Width__c</fullName>
        <description>HAE: HAE: need to be entered Width in INCHES</description>
        <label>Case Width (inches)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Customer_Communication__c</fullName>
        <description>HAE: to represent Customer Communication</description>
        <label>Customer Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Estimated_Date_of_Recovery__c</fullName>
        <description>HAE: states the Estimated Date of Recovery</description>
        <label>Estimated Date of Recovery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HAE_Item_Status__c</fullName>
        <description>HAE: stating the status of the attribute record.</description>
        <label>Item Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Product_Notes__c</fullName>
        <description>HAE: to create Product Notes</description>
        <label>Product Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: it looks upto products records.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>CS_Product_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Region__c</fullName>
        <description>HAE: defines the region</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Replacement_Item__c</fullName>
        <description>HAE: need to be entered Replacement Item.</description>
        <label>Replacement Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Substitute_Item__c</fullName>
        <description>HAE: need to be entered Substitute Item</description>
        <label>Substitute Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Attributes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Product Attributes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HAE_Estimated_Date_of_Recovery_Check</fullName>
        <active>true</active>
        <description>HAE: Date should not be a past date and should have a validation to select a date upto 1 year in future.</description>
        <errorConditionFormula>OR( 
	HAE_Estimated_Date_of_Recovery__c &lt; TODAY(),
    IF(
		OR( 
			MOD( YEAR( HAE_Estimated_Date_of_Recovery__c ), 400 ) = 0, 
			AND( 
				MOD( YEAR( HAE_Estimated_Date_of_Recovery__c ), 4 ) = 0,
				MOD( YEAR( HAE_Estimated_Date_of_Recovery__c ), 100 ) != 0
			)
		),
		 IF(HAE_Estimated_Date_of_Recovery__c - TODAY() &gt; 366, TRUE, FALSE),
		 IF(HAE_Estimated_Date_of_Recovery__c - TODAY() &gt; 365, TRUE, FALSE)
	) 
)</errorConditionFormula>
        <errorDisplayField>HAE_Estimated_Date_of_Recovery__c</errorDisplayField>
        <errorMessage>Please select a date within 1 year in future.</errorMessage>
    </validationRules>
</CustomObject>